pages static done and basic style, footed same

--- a/app/assets/stylesheets/_nav.scss
+++ b/app/assets/stylesheets/_nav.scss
@@ -3,7 +3,9 @@
     display: flex;
     justify-content: space-evenly;
   }
-  
+ .fa-shopping-bag  {
+   font-size: 20px;
+ }   
  .navbar-brand {
     font-family: 'Crimson Text', serif;
  }
