--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -10,7 +10,7 @@
                                     <div class = "core-info-content">
                                     <div class = "form-group">
                                     <!-- https://mailthis.to/-->
-                                        <form accept-charset="UTF-8" action="https://usebasin.com/f/4505182aa564" method="POST" id="email-form">
+                                        <form accept-charset="UTF-8" action="" method="POST" id="email-form">
                                         <div class="form-group row">  
                                             <label for="name" >Name:</label>
                                             <input   type="text" name="name" placeholder="Your name..." id="name">
@@ -28,14 +28,10 @@
                         
                                             <input type="hidden" name="_after" value="contact.html"/>
                         
-                                            <input type="hidden" id="only_for_bots" name="only_for_bots">
-                        
                                             <input type="submit" value="Send" >
                                         </form>
                             </div>
-                        
-                        
-                                    </div>
+                          </div>
                         </div>
                     </section>
                 </main>
