--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,12 @@
-<footer class="container">
-  <p>&copy; Shelby El-rassi 2020</p>
-</footer>
 
+<!-- FOOTER -->
+<footer class="container">
+<p class="float-right"><a href="#">Back to top</a></p>
+  <p>&copy; Shelby El-rassi 2020 
+  &middot; <%= link_to("About", about_path)%> 
+  &middot; <%= link_to("Contact", contact_path)%> 
+  &middot; <%= link_to("Support", support_path)%> 
+  &middot; <%= link_to("Privacy", privacy_path)%> 
+  &middot; <%= link_to("Terms", terms_path)%> 
+  </p>
+  </footer>
