--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
  @import "bootstrap"; 
  @import "variables"; 
  @import "nav"; 
-
+ @import "user_log_sign"; 
  * {
 
     font-family: 'Montserrat', sans-serif;
