--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,14 @@
     <%= f.error_notification %>
       
     <div class="form-inputs">   
+    <%= f.input :username,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "username" }, placeholder: 'username' %>
+    <%= f.input :name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "name" }, placeholder: 'name' %>
       <%= f.input :email,
                   required: true,
                   autofocus: true,
