--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.img-size {
+    width: 30%;
+    height: auto;
+    padding: 5px;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+.image-wrapper {
+  border: 1px solid #000; 
+}
+
