--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,43 +1,35 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Items</h1>
+<%= render 'shared/nav'%> 
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Price</th>
-      <th>Description</th>
-      <th>Size</th>
-      <th>Colour</th>
-      <th>Material</th>
-      <th>Location</th>
-      <th>Shipping price</th>
-      <th>Decimal</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<main role="main">
+<div class=" bg-light">
+        <section class="container ">
+          <div class="column"> 
+            <div class="row">
+                  <% @items.each do |item| %>
+                    <div class="column ">
+                    <<div class = "image-wrapper">
+                    <%= link_to item do %>
+                      <%= image_tag item.images[0], :class => "img-size" %> <br>
+          
+                      <%= item.title %><br>
+                        <%= item.price %>
+                      <% end %>
 
-  <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= item.title %></td>
-        <td><%= item.price %></td>
-        <td><%= item.description %></td>
-        <td><%= item.size %></td>
-        <td><%= item.colour %></td>
-        <td><%= item.material %></td>
-        <td><%= item.location %></td>
-        <td><%= item.shipping_price %></td>
-        <td><%= item.decimal %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                      <% if(current_user && current_user.id && (current_user.id == item.user_id)) %>
+                      <%= link_to 'Edit', edit_item_path(item) %> 
+                      <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %> 
+                      <% end %>
+                      
+                 <% end %>
+                    </div>
+                   </div>
+                  </div>
+                </div>
+        </section>
+    </div> 
+</main>
 
-<br>
+<%= render 'shared/footer'%> 
 
-<%= link_to 'New Item', new_item_path %>
