category model added

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -9,7 +9,7 @@
             <div class="row">
                   <% @items.each do |item| %>
                     <div class="column ">
-                    <<div class = "image-wrapper">
+                    <div class = "image-wrapper">
                     <%= link_to item do %>
                       <%= image_tag item.images[0], :class => "img-size" %> <br>
           
