--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -3,8 +3,8 @@
 
 <%= form_with(model: @item, local:true) do |f| %>
   <%= render "shared/error_messages" %>
-  
-
+  <%= f.label :category %>
+  <%= f.collection_select :category_id, Category.all, :id, :name, { prompt: "Choose a category" }%><br>
   <%= f.label :title %>
   <%= f.text_field :title, placeholder: '...' %><br>
   <%= f.label :price %>
