--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,7 +99,7 @@ main {
    display: inline-block;
    margin-top: 50px;
    font-size: 1rem;
-   letter-spacing: 1px;
+   letter-spacing: .5px;
 
 }
 
