--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -12,6 +12,9 @@
         <% end %>
         </div>
   </div>
+
+
+  <div class="col-md-4">
 <p>
   <strong>Title:</strong>
   <%= @item.title %>
@@ -53,6 +56,8 @@
 </p>
 
 
+</div>
+</div>
 <% if(current_user && current_user.id && (current_user.id == @item.user_id)) %>
     <%= link_to 'Edit', edit_item_path(@item) %> 
 <% end %>
