--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
  @import "user_log_sign"; 
  * {
 
-    font-family: 'Montserrat', sans-serif;
+   font-family: 'Nunito Sans', sans-serif;
  }
  
 
