--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -4,5 +4,5 @@ $hover-color: brown;
 $text-color: black; 
 $background-2nd-color: rosybrown;
 $white-color: white;
-$heading-font-family: 'Crimson Text', serif;
-$body-font-family: 'Montserrat', sans-serif;
+$heading-font-family: 'Nunito Sans', sans-serif;
+$body-font-family: 'Nunito Sans', sans-serif;
