--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,13 +7,13 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src='https://images.unsplash.com/photo-1490481651871-ab68de25d43d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80' class="d-block w-100" alt="...">
+      <img src='https://images.unsplash.com/photo-1524282745852-a463fa495a7f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80' class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-     <img src='https://images.unsplash.com/photo-1525562723836-dca67a71d5f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80' class="d-block w-100" alt="...">
+     <img src='https://images.unsplash.com/photo-1523194258983-4ef0203f0c47?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80' class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-     <img src='https://images.unsplash.com/photo-1558769132-cb1aea458c5e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80' class="d-block w-100" alt="...">
+     <img src='https://images.unsplash.com/photo-1562986398-ef6efbbc9537?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80' class="d-block w-100" alt="...">
     </div>
   </div>
   
