--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,10 @@
+<%= render 'shared/nav'%> 
+
 <h1>New Item</h1>
 
 <%= render 'form', item: @item %>
 
 <%= link_to 'Back', items_path %>
+
+
+<%= render 'shared/footer'%> 
