--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,11 +1,10 @@
-<p id="notice"><%= notice %></p>
 
 <%= render 'shared/nav'%>   
 
 <div class="row">
   <div class="col-md-8">
-        <div class="row">
-        <<div class="container col-md-6">
+      <div class="row">
+        <div class="container col-md-6">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -24,65 +23,69 @@
               <% end %>
         <% end %>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
         </div>
         </div>
         </div>
   </div>
 
 
-  <div class="col-md-4">
+  <div class="col-md-4 main-show-text">
 
-  <%= @item.id %>
-<p>
-  <strong>Title:</strong>
-  <%= @item.title %>
-</p>
+        <%= @item.id %>
+      <p>
+        <strong>Title:</strong>
+        <%= @item.title %>
+      </p>
 
-<p>
-  <strong>Price: $</strong>
-  <%= @item.price %>
-</p>
+      <p>
+        <strong>Price: $</strong>
+        <%= @item.price %>
+      </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @item.description %>
-</p>
+      <p>
+        <strong>Description:</strong>
+        <%= @item.description %>
+      </p>
 
-<p>
-  <strong>Size:</strong>
-  <%= @item.size %>
-</p>
+      <p>
+        <strong>Size:</strong>
+        <%= @item.size %>
+      </p>
 
-<p>
-  <strong>Colour:</strong>
-  <%= @item.colour %>
-</p>
+      <p>
+        <strong>Colour:</strong>
+        <%= @item.colour %>
+      </p>
 
-<p>
-  <strong>Material:</strong>
-  <%= @item.material %>
-</p>
+      <p>
+        <strong>Material:</strong>
+        <%= @item.material %>
+      </p>
 
-<p>
-  <strong>Location:</strong>
-  <%= @item.location %>
-</p>
+      <p>
+        <strong>Location:</strong>
+        <%= @item.location %>
+      </p>
 
-<p>
-  <strong>Shipping: $</strong>
-  <%= @item.shipping%>
-</p>
+      <p>
+        <strong>Shipping: $</strong>    
+        <%= @item.shipping%>
+      </p>
+      <p>
+        <strong>Seller:</strong>
+        <%= link_to @item.user.username, @item.user %>
+      </p>
 
 
-</div>
+   </div>
 </div>
 <% if(current_user && current_user.id && (current_user.id == @item.user_id)) %>
     <%= link_to 'Edit', edit_item_path(@item) %> 
