--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<%= render 'shared/nav'%> 
-
+<header>
+<%= render 'shared/nav'%>  
+</header> 
+<body>
 <main role="main">
 <div class=" bg-light">
         <section class="container ">
@@ -34,6 +36,7 @@
         </section>
     </div> 
 </main>
+</body>
 
 <%= render 'shared/footer'%> 
 
