--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,10 +1,13 @@
-<%= render 'shared/nav'%> 
 
+<header>
+<%= render 'shared/nav'%>  
+</header> 
+<body>
 <h1>New Item</h1>
 
 <%= render 'form', item: @item %>
 
 <%= link_to 'Back', items_path %>
-
+</body>
 
 <%= render 'shared/footer'%> 
