--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,11 @@
 
-<%= render 'shared/nav'%>    
+<header>
+<%= render 'shared/nav'%>  
+</header> 
+<body>
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
+<div id="carouselExampleSlidesOnly" class="carousel slide home-page-slide" data-ride="carousel">
+  <div class="carousel-inner home-page-slide-show ">
     <div class="carousel-item active">
       <img src='https://images.unsplash.com/photo-1524282745852-a463fa495a7f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80' class="d-block w-100" alt="...">
     </div>
@@ -15,5 +18,7 @@
   </div>
 </div>
   
+
+</body>
 
 <%= render 'shared/footer'%> 
