--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 
 <!-- FOOTER -->
-<footer class="container">
-<p class="float-right"><a href="#">Back to top</a></p>
+<footer class="container footer mt-auto py-3">
+<p class="float-right "><a href="#">Back to top</a></p>
   <p>&copy; Shelby El-rassi 2020 
   &middot; <%= link_to("About", about_path)%> 
   &middot; <%= link_to("Contact", contact_path)%> 
@@ -9,4 +9,4 @@
   &middot; <%= link_to("Privacy", privacy_path)%> 
   &middot; <%= link_to("Terms", terms_path)%> 
   </p>
-  </footer>
+</footer>
