--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,6 +1,13 @@
+<header>
+<%= render 'shared/nav'%>  
+</header> 
+<body>
 <h1>Editing Item</h1>
 
 <%= render 'form', item: @item %>
 
 <%= link_to 'Show', @item %> |
 <%= link_to 'Back', items_path %>
+</body>
+
+<%= render 'shared/footer'%> 
