--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,7 @@
-
-<%= render 'shared/nav'%>   
-
+<header>
+<%= render 'shared/nav'%>  
+</header> 
+<body>
 <div class="row">
   <div class="col-md-8">
       <div class="row">
@@ -83,15 +84,17 @@
         <strong>Seller:</strong>
         <%= link_to @item.user.username, @item.user %>
       </p>
-
-
+      <p>
+      <% if(current_user && current_user.id && (current_user.id == @item.user_id)) %>
+      <%= link_to 'Edit', edit_item_path(@item) %> 
+   <% end %>
+  </p>
+  <p>
+  <%= link_to 'Back', items_path %>
+  </p>
    </div>
 </div>
-<% if(current_user && current_user.id && (current_user.id == @item.user_id)) %>
-    <%= link_to 'Edit', edit_item_path(@item) %> 
-<% end %>
-<%= link_to 'Back', items_path %>
 
 
-
+</body>
 <%= render 'shared/footer'%> 
