--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -38,7 +38,7 @@
                 <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "user-buttons-do"%>
               </li>
               <li class = "user-buttons">
-              <%= link_to 'View Profile', user_path, class: "user-buttons-do"%>
+              <%= link_to 'View Profile', user_session_path, class: "user-buttons-do"%>
               </li>
               <li class = "user-buttons">
                 <%= link_to "Edit Profile", edit_user_registration_path, class: "user-buttons-do"%>
