--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,8 +1,8 @@
 <header>
 <%= render 'shared/nav'%>  
 </header> 
-<body>
-<div class="row">
+
+<div class="row main-show-page">  
   <div class="col-md-8">
       <div class="row">
         <div class="container col-md-6">
@@ -96,5 +96,4 @@
 </div>
 
 
-</body>
 <%= render 'shared/footer'%> 
