--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,22 +3,79 @@
 <%= render 'shared/nav'%>  
 </header> 
 <body>
+<main role="main" class = "home-main">
 
-<div id="carouselExampleSlidesOnly" class="carousel slide home-page-slide" data-ride="carousel">
-  <div class="carousel-inner home-page-slide-show ">
-    <div class="carousel-item active">
-      <img src='https://images.unsplash.com/photo-1524282745852-a463fa495a7f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80' class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-     <img src='https://images.unsplash.com/photo-1523194258983-4ef0203f0c47?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80' class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-     <img src='https://images.unsplash.com/photo-1562986398-ef6efbbc9537?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80' class="d-block w-100" alt="...">
-    </div>
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-left home-background">
+  <div class="col-md-5 p-lg-5 mx-auto my-5 float-left card mb-3">
+    <h1 class="display-4 font-weight-normal">Buy. Sell. Thrift.</h1>
+    <p class="lead font-weight-normal">Preloved, Vintage, Street Style, Designer and more.</p>
+    <p>
+    <%= link_to 'Sign up today', new_item_path , class: "btn btn-lg btn-outline-secondary" %>
+    </p>
   </div>
-</div> 
+  <div class="product-device shadow-sm d-none d-md-block "></div>
+  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+  </div>
+
+  <hr class="featurette-divider">
+  <div class="container marketing ">
+
+    <div class="row">
+      <div class="col-lg-4 ">
+      <img src='https://images.unsplash.com/photo-1519220279207-fddf068f2141?ixlib=rb-1.2.1&auto=format&fit=crop&w=635&q=80' class="bd-placeholder-img rounded-circle" alt="..." width="140" height="140">
+      <h2>What?</h2>
+        <p>Your Thrift Co. is an online marketplace for buying, selling and personal trend setting.    </p>
+        <p><a class="btn btn-outline-secondary" href="#" role="button">Get Started Today &raquo;</a></p>
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+      <img src='https://images.unsplash.com/photo-1527519124254-9dafd8b3533b?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80' class="bd-placeholder-img rounded-circle" alt="..." width="140" height="140">
+      <h2>How?</h2>
+        <p>Need help getting started?</p>
+        <p><a class="btn btn-outline-secondary" href="#" role="button">Sell now &raquo;</a></p>
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+      <img src='https://images.unsplash.com/photo-1574279606130-09958dc756f7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80' class="bd-placeholder-img rounded-circle" alt="..." width="140" height="140">
+        <h2>Why?</h2>
+        <p>Reduce, Reuse, Recycle. Your Thrift Co. is a platform where we can change fashion idealism. Promote less waste, set new unique trends and form a fashion community.</p>
+        <p><a class="btn btn-outline-secondary" href="#" role="button">Find out more &raquo;</a></p>
+      </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
+
+
+
+
+
+    
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Find your style. <span class="text-muted">It’ll blow your mind.</span></h2>
+        <p class="lead"></p>
+        <p><a class="btn btn-outline-secondary" href="#" role="button">View details &raquo;</a></p>
+      </div>
+      <div class="col-md-5">
+      <img src='https://images.unsplash.com/photo-1583174435088-0e52c15b1c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1049&q=80' class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto home-page-images" alt="..." width="500" height="500" >
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette ">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
+        <p class="lead"></p>
+        <p><a class="btn btn-outline-secondary" href="#" role="button">View details &raquo;</a></p>
+        </div>
   
+      <div class="col-md-5 order-md-1">
+      <img src='https://images.unsplash.com/photo-1583396726704-988433ebd0fe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=658&q=80' class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto home-page-images" alt="..." width='500' height='500'>
+      
+      </div>
+    </div>
 
-</body>
-
-<%= render 'shared/footer'%> 
+    <hr class="featurette-divider">
+    </main> 
+  </div>
+  </body>
+  <%= render 'shared/footer'%> 
