--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,6 +6,10 @@
 <body>
 <main role="main">
 <div class=" bg-light">
+          <p>
+          <strong>Title:</strong>
+          <%=  %>
+          </p>
         <section class="container ">
           <div class="column"> 
             <div class="row">
@@ -40,3 +44,4 @@
 
 <%= render 'shared/footer'%> 
 
+ 
