--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -84,15 +84,15 @@ margin-top: 90px;
 .home-background {
   background-image: url('https://images.unsplash.com/photo-1545335779-4209a3efe3a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80')
 }
-.index-home {
-  z-index: -1;
-}
+
 .home-main {
   margin-top: 50px;
 }
 .card {
   width: 18rem !important;
+
 }
+
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
@@ -100,7 +100,7 @@ margin-top: 90px;
 /* Center align the text within the three columns below the carousel */
 .marketing .col-lg-4 {
   margin-bottom: 1.5rem;
-  text-align: center;
+  text-align: left;
 }
 .marketing h2 {
   font-weight: 400;
