--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -34,7 +34,7 @@
               <%= link_to 'Sell My Clothes', new_item_path, class: "user-buttons-do" %>
             </li>
             <% if user_signed_in? %>
-              <li class = "user-buttons">   
+              <li class = "user-buttons">        
                 <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "user-buttons-do"%>
               </li>
               <li class = "user-buttons">
@@ -60,11 +60,11 @@
     </div>
 
     <a class="navbar-brand" href="/">YOUR THRIFT CO.</a>
-
-    <i class="fas fa-shopping-bag"></i>
-  
+    <%= link_to new_shopping_bag_path do %>
+    <i class="fas fa-shopping-bag"></i>  
+    <% end %>
 </nav>
-
+    
     
 
     
