trying to configure marking as paid

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -64,11 +64,16 @@
               <%= link_to 'Back', items_path %>
               </p>
               <% unless(current_user && current_user.id && (current_user.id == @item.user_id)) %>
-              <p>
-              <button data-stripe="payment">
-              Buy this Item
-              </button>
-              </P>
+              <% unless(payment_intent.succeeded.item_id) %>
+                  <button data-stripe="payment">
+                  Buy this Item
+                  </button>
+                  </P>
+                <% else %>
+                    <button >
+                      SOLD
+                      </button>
+              <% end %>
               <% end %>
           </div>
     </div>  
@@ -90,4 +95,4 @@ document
       sessionId: "<%= @session_id %>"
     });
   });
-</script>
+</script>    
