--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,9 +3,44 @@
 </header> 
 <body>
 
-<h2>Your Cart</h2>
+  
+<div class="page-header">
+  <h1>Your Cart</h1>
+</div>
 
-<%= render :template => 'cart_items/show' %>
+<div class="well powerpuffgirl">
+  <table class="table table-striped" id="cart-contents">
+    <% @items.each do |item, quantity| %>
+    <tr>
+      <td><%= link_to (image_tag item.image, width: 100), item_path(item) %></td>
+      <td><%= link_to (item.title), item_path(item) %></td>
+      <td><%= number_to_currency(item.price) %></td>
+      <td><%= item.description.truncate_words(10) %></td>
+      <td>
+        <div class="btn-group">
+          <%= button_to "+", cart_path(item_id: item.id, quantity_change: 1), method: "put" %>
+          <%= button_to "-", cart_path(item_id: item.id, quantity_change: -1), method: "put" %>
+        </div>
+      </td>
+      <td>Quantity: <%= quantity %></td>
+    </tr>
+    <tr>
+      <td></td><td></td><td></td><td></td>
+      <td><%= button_to "Remove", cart_path(item_id: item.id), method: 'delete' %></td>
+      <td>Subtotal: <%= number_to_currency(item.price * quantity) %></td>
+    </tr>
+    <% end %>
+  </table>
+
+  Total: <%= number_to_currency(@cart.total) %>
+  <% if current_user %>
+    <%= button_to "Checkout", orders_path %>
+  <% else %>
+    <%= link_to "Login or Create Account to Checkout", new_user_path, class: "btn btn-primary" %>
+  <% end %>
+</div>
+
+
 
 </body>
 
