--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -60,7 +60,7 @@
     </div>
 
     <a class="navbar-brand" href="/">YOUR THRIFT CO.</a>
-    <%= link_to carts_path do %>
+    <%= link_to cart_path do %>
     <i class="fas fa-shopping-bag"></i>  
     <% end %>
 </nav>
