--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -14,9 +14,9 @@
                 <%= @item.id %>
               <p>
                 <strong>Title:</strong>
-                <%= @item.title %>
+                <%= @item.title %>   
               </p>
-
+    
               <p>
                 <strong>Price:</strong>
                 <%= number_to_currency(@item.price) %>
@@ -63,8 +63,12 @@
               <p>
               <%= link_to 'Back', items_path %>
               </p>
-              <%= button_to 'Add to cart', cart_path(item_id: @item.id) %>
-          </div>
+              <% if user_signed_in? %>
+              <%= button_to 'Add to Bag', cart_path(item_id: @item.id) %>
+              <% else %>
+              <%= button_to 'Sign In to Purchase', new_user_session_path %>
+              <% end %>
+          </div>    
     </div>
 </body>
 
